Bug 1337696.  Fix change hint computation for table-outer frames to be more correct.  r=emilio

MozReview-Commit-ID: LgRmTlWsM6o